gobmkida/g1/decide_position
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/decide_position/src/engine/sgfdecide.c:897:36: error: use of undeclared identifier 'snames_0'
gprintf( "status=%s, escape=%d\n", snames_0[v1[4]], ( unsigned int)dragon2[*v1].escape_route); 
                                   ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/decide_position/src/obj/1/sgfdecide.o] Error 1
